# opt-flow-parallel

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  run_mpi.sh
include/: xcorr_serial.hpp
src/: opt_flow_mpi.cpp  xcorr_serial.cpp
